[package]
name = "marlin"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.9", features = ["derive"] }
colored = "2"
ark-std = { version = "^0.3.0", default-features = false }
ark-ff = { version = "^0.3.0", default-features = false }
ark-relations = { version = "^0.3.0", default-features = false }
ark-bls12-381 = { version = "^0.3.0", default-features = false, features = [ "curve" ] }
ark-poly-commit = { version = "^0.3.0", default-features = false }
ark-poly = { version = "^0.3.0", default-features = false }
marlin = { git = "https://github.com/SaraSorianoRossa/Original-Marlin.git", default-features = false }
marlin-v2 = { git = "https://github.com/SaraSorianoRossa/Marlin-v2.git", default-features = false }
marlin-v3 = { git = "https://github.com/SaraSorianoRossa/Marlin-v3.git", default-features = false }
marlin-v4 = { git = "https://github.com/SaraSorianoRossa/Marlin-v4.git", default-features = false }
blake2 = { version = "0.9", default-features = false }
ark-groth16 = {version = "^0.3.0", default-features = false }
ark-snark = { version = "^0.3.0", default-features = false }

[features]
print-trace = []
#print-trace = [ "ark-std/print-trace" ]